--- a/WindowsSmartInk/SmartInkLaboratory/Views/UserControls/TrainingView.xaml
+++ b/WindowsSmartInk/SmartInkLaboratory/Views/UserControls/TrainingView.xaml
@@ -60,7 +60,9 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Image Margin="10" Source="{Binding TargetIcon}"/>
-        <Image x:Name="InkDrawing" Source="{Binding InkDrawing}" Grid.Column="1" Margin="10" />
+        <Border Grid.Column="1" Margin="10" Width="128" Height="128" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="5" Background="DarkGray" >
+            <Image x:Name="InkDrawing" Source="{Binding InkDrawing}" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" />
+        </Border>
         <ProgressBar x:Name="UploadProgress" Grid.Row="1" Grid.ColumnSpan="2" Maximum="{Binding TotalImageCount}" Value="{Binding ImageUploadCount}" Visibility="Collapsed"/>
         <Grid  Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"  >
             <Grid.ColumnDefinitions>
