binding to twoway for project selection list

--- a/WindowsSmartInk/SmartInkLaboratory/MainPage.xaml
+++ b/WindowsSmartInk/SmartInkLaboratory/MainPage.xaml
@@ -52,7 +52,7 @@
                     <TextBlock Text="Current Project:"/>
                     <controls:SelectionList x:Name="ProjectSelectionList" 
                                         ItemsSource="{Binding ProjectsList}" 
-                                        SelectedItem="{Binding CurrentProject}" 
+                                        SelectedItem="{Binding CurrentProject, Mode=TwoWay}" 
                                         VerticalAlignment="Center" 
                                         MinWidth="150"
                                         Command="{Binding SelectProject}"
