--- a/WindowsSmartInk/SmartInkLaboratory/MainPage.xaml
+++ b/WindowsSmartInk/SmartInkLaboratory/MainPage.xaml
@@ -67,11 +67,11 @@
                 </StackPanel>
                 <AppBarButton Label="New Project" Icon="Add" Margin="20,0,0,0" AllowFocusOnInteraction="True" >
                     <AppBarButton.Flyout>
-                        <Flyout>
+                        <Flyout helpers:FlyoutHelpers.Parent="{Binding ElementName=CreateProjectButton}" helpers:FlyoutHelpers.IsOpen="{Binding IsCreating, Mode=TwoWay}">
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="Project Name:" Margin="0,0,10,0"/>
                                 <TextBox x:Name="NewProjectName" MinWidth="150" Margin="0,0,20,0" />
-                                <Button Content="Create" Command="{Binding CreateProject}" CommandParameter="{Binding ElementName=NewProjectName,Path=Text}" Margin="0,0,20,0"/>
+                                <Button x:Name="CreateProjectButton" Content="Create" Command="{Binding CreateProject}" CommandParameter="{Binding ElementName=NewProjectName,Path=Text}" Margin="0,0,20,0"/>
                             </StackPanel>
                         </Flyout>
                     </AppBarButton.Flyout>
